add needs to build job

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -13,6 +13,7 @@ jobs:
         run: npm --version
   build:
     runs-on: ubuntu-20.04
+    needs: init
     steps: 
       - name: get repository code
         uses: actions/checkout@v3
