--- a/workflow-samples/deployment.yaml
+++ b/workflow-samples/deployment.yaml
@@ -7,6 +7,7 @@ jobs:
       - name: get repository code
         uses: actions/checkout@v3
       - name: install dependecies
+        # run: npm ci
         run: npm install
       - name: get npm version
         run: npm --version
