--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,26 +1,26 @@
-# name: deploy vue-electron-app
-# on: push
-# jobs:
-#   init:
-#     runs-on: ubuntu-20.04
-#     steps: 
-#       - name: get repository code
-#         uses: actions/checkout@v3
-#       - name: install dependecies
-#         run: npm install
-#       - name: get npm version
-#         run: npm --version
-#   build:
-#     runs-on: ubuntu-20.04
-#     needs: init
-#     steps: 
-#       - name: get repository code
-#         uses: actions/checkout@v3
-#       - name: install dependecies
-#         run: npm install
-#       - name: build application
-#         run: npm run build
-#       - name: deploy
-#         run: echo deploy application ...     
+name: deploy vue-electron-app
+on: push
+jobs:
+  init:
+    runs-on: ubuntu-20.04
+    steps: 
+      - name: get repository code
+        uses: actions/checkout@v3
+      - name: install dependecies
+        run: npm install
+      - name: get npm version
+        run: npm --version
+  build:
+    runs-on: ubuntu-20.04
+    needs: init
+    steps: 
+      - name: get repository code
+        uses: actions/checkout@v3
+      - name: install dependecies
+        run: npm install
+      - name: build application
+        run: npm run build
+      - name: deploy
+        run: echo deploy application ...     
 
  
