--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,7 +1,7 @@
 name: deploy vue-electron-app
 on: push:
   branches:
-    - master
+    - 'master'
   # paths-ignore:
   #   - '.github/workflow/*'   
 jobs:
