--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,11 +1,10 @@
 name: build & deploy
 
 on: [push, workflow_dispatch]
-
 jobs:
-
   build:
     runs-on: ubuntu-20.04
+
     steps:
       - name: get repository code
         uses: actions/checkout@v3
@@ -20,19 +19,19 @@ jobs:
         uses: actions/upload-artifact@v3
         
         with:
-          path: build
-          name: build-files 
+          path: dist
+          name: dist-files 
 
-  # deploy:
-  #   needs: build
-  #   runs-on: ubuntu-20.04
+  deploy:
+    needs: build
+    runs-on: ubuntu-20.04
 
-  #   steps:
-  #     - name: get build project
-  #       uses: actions/download-artifact@v3 
+    steps:
+      - name: get build project
+        uses: actions/download-artifact@v3 
 
-  #       with: 
-  #         name: build-files  
+        with: 
+          name: dist-files  
 
 
 
