--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,13 +10,15 @@ jobs:
         uses: actions/checkout@v3
       
       - name: install dependecies
-        run: npm install
+        #run: npm install
+        run: yarn install 
 
       - name: build application
-        run: npm run build
+        #run: npm run build
+        run: yarn electron:build
 
       - name: upload artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v3 
         
         with:
           path: dist
