--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,8 +10,7 @@ jobs:
         uses: actions/checkout@v3
       
       - name: install dependecies
-        #run: npm install
-        run: yarn install 
+        run: npm install
 
       - name: build application
         #run: npm run build
