--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,15 +13,15 @@ jobs:
         run: npm install
 
       - name: build application
-        #run: npm run build
-        run: yarn electron:build
+        run: npm run build
+        # run: yarn electron:build
 
       - name: upload artifact
         uses: actions/upload-artifact@v3 
         
         with:
-          # path: dist
-          path: dist_electron
+          path: dist
+          # path: dist_electron
           name: dist-files 
 
   deploy:
