--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,8 +13,8 @@ jobs:
         run: npm install
 
       - name: build application
-        # run: npm run build
-        run: npm electron:build
+        run: npm run build
+        # run: npm electron build
 
       - name: upload artifact
         uses: actions/upload-artifact@v3 
