--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,21 +12,15 @@ jobs:
       - name: install dependecies
         run: npm install
 
-      - name: install vue
-        run: npm vue
+      - name: build application
+        run: npm electron build
 
-      # - name: install electron-builder
-      #   vue add electron-builder
-
-      # - name: build application
-      #   run: npm electron build
-
-      # - name: upload artifact
-      #   uses: actions/upload-artifact@v3 
+      - name: upload artifact
+        uses: actions/upload-artifact@v3 
         
-      #   with:
-      #     path: dist
-      #     name: dist-files 
+        with:
+          path: dist
+          name: dist-files 
 
   deploy:
     needs: build
