--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
         run: npm install
 
       - name: build application
-        run: npm electron build
+        run: npm electron:build
 
       - name: upload artifact
         uses: actions/upload-artifact@v3 
