--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
         run: npm install
 
       - name: build application
-        run: npm electron:build
+        run: npm run electron:build
 
       - name: upload artifact
         uses: actions/upload-artifact@v3 
@@ -21,7 +21,7 @@ jobs:
         with:
           path: dist
           name: dist-files 
-          
+
 
   deploy:
     needs: build
