--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,6 +12,10 @@ jobs:
       - name: install dependecies
         run: npm install
 
+        #vue add electron-builder 
+      - name: add electron-builder
+        run: vue add electron-builder  
+
       - name: build application
         run: npm run electron:build
 
