--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,17 +13,16 @@ jobs:
         run: npm install
 
       - name: add electron-builder
-        # run: vue add electron-builder  
         run: npm install -g @vue/cli
 
       - name: build application
-        run: npm run electron:build
+        run: npm run build
 
       - name: upload artifact
         uses: actions/upload-artifact@v3 
         
         with:
-          path: dist_electron
+          path: dist
           name: dist-files 
 
 
