--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,6 +8,12 @@ jobs:
     steps:
       - name: get repository code
         uses: actions/checkout@v3
+
+      - name: cache dependecies
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: node-modules-${{ hashFiles('**/package-lock.json') }} 
       
       - name: install dependecies
         run: npm install
