--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -5,7 +5,7 @@ on:
   workflow_dispatch:
 env: 
   NODE_ENV: production
-  GH_SECRET: 42
+  GH_SECRET: ${{ secrets.DEPLOY_SECRET }}
 
 jobs:
   build:
@@ -18,6 +18,8 @@ jobs:
 
   deploy:
     runs-on: ubuntu-20.04
+    env: 
+      NODE_ENV: production-deploy 
     steps:
       - name: print env deploy
         run: |
