--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "main": "background.js",
   "dependencies": {
     "core-js": "^3.8.3",
-    "node-opcua": "2.26.0",
+    "node-opcua": "^2.91.1",
     "serialport": "^10.5.0",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
